2015-02-05	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* autogen.sh: not removing COPYING anymore, so 'make dist' does not fail

	* configure.ac: auto-generated with src/build/create-configureac.sh
	--enable-FEATURE/--disable-FEATURE for every src subdirectory added

	* .gitignore: COPYING added

	* Makefile.am: auto-generated with src/build/create-makefileam.sh
	selecting features according to --enable-FEATURE/--disable-FEATURE

	* src/: source files reorganized into selectable features (./configure --enable-FEATURE)

	* src/build/create-configureac.sh: auto-generating configure.ac from the source directory

	* src/build/create-makefileam.sh: auto-generating Makefile.am from the source directory

2015-02-03	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/kerbalpodcast-dl.sh: script for auto-downloading the latest kerbal podcast
	specifying the output file

2015-01-21	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/changelogupdate.sh: only writing staged files to the changelog
	now with the correct amount of empty lines

	* src/mountasuser.sh: convenience functions and additional error checking

	* src/randomstring.sh: printing a short random string, e.g. for (unsafe) passwords

	* src/scrollevince.sh: interactive script to scroll all open evince windows simultaneously. Still a bit buggy

	* githooks/pre-commit: auto-stage ChangeLog during commit

	* src/unstagedfiles.sh: print all unstaged, but tracked files for the direct subdirectories

	* src/pullall.sh: improved directory traversal
	easier dirname printing (as in 'easier on the eyes')

	* src/pushall.sh: pretty directory and remote texts

2014-11-22	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/watchscroll.sh: watch-like capabilities, but with scrolling

2014-11-21	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: execution duration information added
	--nomishaps option added to hide unused and duplicate citations

2014-11-18	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
