@@ -3,7 +3,7 @@ AC_INIT([eltools], [1.0], [erik.e.lorenz@gmail.com])
 AM_INIT_AUTOMAKE()
 
 AC_ARG_ENABLE([chem],
-[  --enable-chem    Install chem scripts],
+AS_HELP_STRING([--enable-chem], [Include chem scripts]),
 [case "${enableval}" in
   yes) chem=true ;;
   no) chem=false ;;
@@ -12,7 +12,7 @@ esac],[chem=false])
 AM_CONDITIONAL([HAVE_CHEM], [test x$chem = xtrue])
 
 AC_ARG_ENABLE([interactive],
-[  --enable-interactive    Install interactive scripts],
+AS_HELP_STRING([--enable-interactive], [Include interactive scripts]),
 [case "${enableval}" in
   yes) interactive=true ;;
   no) interactive=false ;;
@@ -21,7 +21,7 @@ esac],[interactive=false])
 AM_CONDITIONAL([HAVE_INTERACTIVE], [test x$interactive = xtrue])
 
 AC_ARG_ENABLE([bash],
-[  --enable-bash    Install bash scripts],
+AS_HELP_STRING([--enable-bash], [Include bash scripts]),
 [case "${enableval}" in
   yes) bash=true ;;
   no) bash=false ;;
@@ -30,7 +30,7 @@ esac],[bash=false])
 AM_CONDITIONAL([HAVE_BASH], [test x$bash = xtrue])
 
 AC_ARG_ENABLE([build],
-[  --enable-build    Install build scripts],
+AS_HELP_STRING([--enable-build], [Include build scripts]),
 [case "${enableval}" in
   yes) build=true ;;
   no) build=false ;;
@@ -39,7 +39,7 @@ esac],[build=false])
 AM_CONDITIONAL([HAVE_BUILD], [test x$build = xtrue])
 
 AC_ARG_ENABLE([git],
-[  --disable-git    Do not install git scripts],
+AS_HELP_STRING([--disable-git], [Exclude git scripts]),
 [case "${enableval}" in
   yes) git=true ;;
   no) git=false ;;
@@ -48,7 +48,7 @@ esac],[git=true])
 AM_CONDITIONAL([HAVE_GIT], [test x$git = xtrue])
 
 AC_ARG_ENABLE([desktop],
-[  --disable-desktop    Do not install desktop scripts],
+AS_HELP_STRING([--disable-desktop], [Exclude desktop scripts]),
 [case "${enableval}" in
   yes) desktop=true ;;
   no) desktop=false ;;
@@ -57,7 +57,7 @@ esac],[desktop=true])
 AM_CONDITIONAL([HAVE_DESKTOP], [test x$desktop = xtrue])
 
 AC_ARG_ENABLE([pdflatex],
-[  --enable-pdflatex    Install pdflatex scripts],
+AS_HELP_STRING([--enable-pdflatex], [Include pdflatex scripts]),
 [case "${enableval}" in
   yes) pdflatex=true ;;
   no) pdflatex=false ;;
@@ -66,7 +66,7 @@ esac],[pdflatex=false])
 AM_CONDITIONAL([HAVE_PDFLATEX], [test x$pdflatex = xtrue])
 
 AC_ARG_ENABLE([arch],
-[  --enable-arch    Install arch scripts],
+AS_HELP_STRING([--enable-arch], [Include arch scripts]),
 [case "${enableval}" in
   yes) arch=true ;;
   no) arch=false ;;
@@ -75,7 +75,7 @@ esac],[arch=false])
 AM_CONDITIONAL([HAVE_ARCH], [test x$arch = xtrue])
 
 AC_ARG_ENABLE([download],
-[  --disable-download    Do not install download scripts],
+AS_HELP_STRING([--disable-download], [Exclude download scripts]),
 [case "${enableval}" in
   yes) download=true ;;
   no) download=false ;;
@@ -84,7 +84,7 @@ esac],[download=true])
 AM_CONDITIONAL([HAVE_DOWNLOAD], [test x$download = xtrue])
 
 AC_ARG_ENABLE([mount],
-[  --disable-mount    Do not install mount scripts],
+AS_HELP_STRING([--disable-mount], [Exclude mount scripts]),
 [case "${enableval}" in
   yes) mount=true ;;
   no) mount=false ;;
